<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#607D8B"
    android:orientation="vertical"
    tools:context="com.guessgame.akwag.myapplication.MainActivity">

    <Button
        android:id="@+id/button_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/yes"
        android:textSize="16sp"
        android:textStyle="normal"
        android:padding="20dp" />

    <Button
        android:id="@+id/no_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/button_yes"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignRight="@id/button_yes"
        android:text="@string/no"
        android:textSize="16sp"
        android:textStyle="normal"
        android:padding="20dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF5252"
        android:text="@string/welcome"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:typeface="monospace"
        android:padding="120dp"
        android:gravity="center_horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:padding="40dp"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_game_description"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:typeface="monospace"
        android:layout_above="@+id/button_yes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="18dp"
        android:layout_below="@+id/textView" />

</RelativeLayout>
