<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    android:orientation="vertical"
    tools:context="com.guessgame.akwag.myapplication.GameStartActivity">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/viewmod" />


    <Button
        android:id="@+id/guess_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/outMessage"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="#EF5350"
        android:text="@string/guess"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/instruct"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="normal" />


    <EditText
        android:id="@+id/userInput"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/guess_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:ellipsize="end"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/userInput"
        android:inputType="number"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="15sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/outMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="27dp"
        android:padding="30dp"
        android:text="@string/instruct1"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="normal"
        android:typeface="normal" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="83dp"
        android:background="#29B6F6"
        android:onClick="generateNewGame"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@android:color/white"
        android:textStyle="normal" />

</RelativeLayout>
